# vivid-sequencers

./: AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
.github/workflows/: smoke.yml
graphs/: arp_chord_prog.json  arpeggiator_demo.json  chord_progression_demo.json  chromatic_ghosts.json  control_demo.json  drum_pattern.json  note_pattern_chords.json  pattern_algebra_demo.json  smooth_modulation.json  spread_transform_demo.json  state_machine_demo.json  tracker_demo.json  tracker_melody.json
src/: arpeggiator.cpp  arpeggiator_patterns.h  chord_progression.cpp  drum_sequencer.cpp  drum_sequencer_layout.h  euclidean.cpp  midi_helpers.h  note_duration.cpp  note_pattern.cpp  pat_transform.cpp  pattern_seq.cpp  phase_to_midi.cpp  phase_to_midi.h  sequencer.cpp  state_machine.cpp  tracker.cpp  tracker_data.h
tests/: audio_op_harness.h  plugin_test_utils.h  test_arpeggiator_patterns.cpp  test_audio_operator_contracts.cpp  test_operator_smoke.cpp  test_package_manifest.cpp  test_pattern_algebra.cpp  test_state_machine.cpp  test_tracker_contract.cpp
